<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_category_default"
        android:entries="@array/settings_category_labels"
        android:entryValues="@array/settings_category_values"
        android:key="@string/settings_category_key"
        android:title="@string/settings_category_title" />

    <com.example.android.newsapp.DatePickerPreference
        android:key="@string/settings_date_key"
        android:title="@string/settings_date_title" />

    <ListPreference
        android:defaultValue="@string/settings_sort_default"
        android:entries="@array/settings_sort_labels"
        android:entryValues="@array/settings_sort_values"
        android:key="@string/settings_sort_key"
        android:title="@string/settings_sort_title" />

    <EditTextPreference
        android:key="@string/settings_search_key"
        android:title="@string/settings_search_title" />

</PreferenceScreen>